log
Thu 05 Oct 2023 02:44:54 AM UTC: 
 tests:  0|5
total_score: 0/70
b5d3e7e
Thu 05 Oct 2023 03:10:43 AM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  2|4
total_score: 15/70
1b34252
Thu 05 Oct 2023 03:19:14 AM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f6372c2
Thu 05 Oct 2023 03:20:19 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
979aafb
Thu 05 Oct 2023 03:28:49 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:7: error: unused variable ‘numerosValidos’ [-Werror=unused-variable]
   47 |   int numerosValidos[10] = {0, 0, 0, 0, 0, 0, 0, 0, 0, 0};
      |       ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a00681e
Thu 05 Oct 2023 03:30:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:11: error: unused variable ‘numeroActual’ [-Werror=unused-variable]
   51 |       int numeroActual = n -> sudo[i][j];
      |           ^~~~~~~~~~~~
sudoku.c:47:7: error: unused variable ‘numerosValidos’ [-Werror=unused-variable]
   47 |   int numerosValidos[10] = {0, 0, 0, 0, 0, 0, 0, 0, 0, 0};
      |       ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
69fee47
Thu 05 Oct 2023 03:32:04 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|3
total_score: 25/70
fa9ddc4
